dnl
dnl
dnl configure.in.head:
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/main.c)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_AWK
AC_CHECK_PROG(TAR,tar,tar)
AC_CHECK_PROG(GZIP,gzip,gzip)
AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)

AC_SYS_LARGEFILE

SUPERHID_MAJOR_VERSION=1
SUPERHID_MINOR_VERSION=0
SUPERHID_MICRO_VERSION=1


SUPERHID_MAJOR_VERSION=$SUPERHID_MAJOR_VERSION.$SUPERHID_MINOR_VERSION.$SUPERHID_MICRO_VERSION

AC_SUBST(SUPERHID_MAJOR_VERSION)
AC_SUBST(SUPERHID_MINOR_VERSION)
AC_SUBST(SUPERHID_MICRO_VERSION)
AC_SUBST(SUPERHID_VERSION)


VERSION=$SUPERHID_VERSION
PACKAGE=superhid

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)


AM_CONFIG_HEADER(src/config.h)

# Checks for header files.
AC_CHECK_HEADERS([malloc.h])
AC_HEADER_STDC
AC_FUNC_MALLOC

AC_C_INLINE
AC_C_CONST

AC_ARG_WITH(libxenstore,
        AC_HELP_STRING([--with-libxenstore=PATH],[Path to prefix where where libxenstore and xen were installed]),
                LIBXENSTORE_PREFIX=$with_libxenstore,[])


case "x$LIBXENSTORE_PREFIX" in
        xno)
                LIBXENSTORE_INC=""
                LIBXENSTORE_LIB=-lxenstore
                ;;
        xyes)
                LIBXENSTORE_INC=""
                LIBXENSTORE_LIB=-lxenstore
                ;;
        *)
                LIBXENSTORE_INC="-I${LIBXENSTORE_PREFIX}/include"
                LIBXENSTORE_LIB="-L${LIBXENSTORE_PREFIX}/lib -lxenstore"
                ;;
esac


ORIG_LDFLAGS="${LDFLAGS}"
ORIG_CFLAGS="${CFLAGS}"

        have_libxenstore=true

        LDFLAGS="${LDFLAGS} ${LIBXENSTORE_LIB}"
        CFLAGS="${CFLAGS} ${LIBXENSTORE_INC}"

        AC_CHECK_HEADERS([xs.h],[],[have_libxenstore=false])
        AC_CHECK_FUNC(xs_read,[],[have_libxenstore=false])

LDFLAGS="${ORIG_LDFLAGS}"
CFLAGS="${ORIG_CFLAGS}"

if [ "x$have_libxenstore" != "xtrue" ]; then
        AC_MSG_ERROR([no xenstore library found])
fi

AC_SUBST(LIBXENSTORE_INC)
AC_SUBST(LIBXENSTORE_LIB)

AC_ARG_WITH(idldir,AC_HELP_STRING([--with-idldir=PATH],[Path to dbus idl desription files]),
                IDLDIR=$with_idldir,IDLDIR=/usr/share/idl)


AC_OUTPUT([Makefile
	   src/Makefile])

